--- a/sasha.html
+++ b/sasha.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<script src="https://app.moyklass.com/api/site/widget/forms?id=zysRyEDiiLmeZ2FNiEwuNdSVQdTr" type="text/javascript" charset="UTF-8"></script>
+		<script type="text/javascript">WdgMoyklass['formszysRyEDiiLmeZ2FNiEwuNdSVQdTr'].init('WdgMoyklassForm1');</script>
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<title>Главная</title>
+  <style>
+   a {
+    text-decoration: none;
+   }
+  </style>
 	<title>Сашко</title>
 	</head>
 	
 	<body><center>
 	<right><img src="hitler.jpg"></right>
 	<h2>Предположительное фото Сашко<h2>
+	<h3>Его соц.сети:<h3>
+	<button><a href="https://www.youtube.com/c/MrMarmok"><font size="5">YouTube</font></a></button>
 	<h1>Описание<h1>
 	<p>Сашуля родился в 2010 году. Является величайшим игроком игры <a href="brawl.html">Brawl Stars</a>. Номинант премии мира за поставку оружия талибам</p>
 	</center></body>
