--- a/afgan.html
+++ b/afgan.html
@@ -10,19 +10,14 @@
     text-decoration: none;
    }
   </style>
-	<title>Веруся</title>
+	<title>Афганистан</title>
 	</head>
 	
 	<body><center>
-	<right><img src="photo.jpg"></right>
-	<h2>Фото Веры Глининой у храма<h2>
-	<h3>Её соц.сети:<h3>
-	<button><a href="https://vk.com/id0"><font size="5">ВК</font></a></button>
+	<h1>Афганистан<h1>
+	<right><img src="afgan.svg"></right>
+	<h2>Флаг Афганистана<h2>
 	<h1>Описание<h1>
-	<p>Вера глинина родилась в 1779 году. Является матерью величайшего кибер спортсмена в истории <a href="sasha.html">Сашко</a></p>
-	<h1> <h1>
-	<h3>Обвинения за угрозу национальной безопасности<h3>
-	<img src="ugrozi.jpg">
-	</p>Помогала Гретте Тунберг в решении миграционных вопросов на территории <a href="afgan.html">Афганистана</a><p>
+	<p>Афганистан - карликовая страна в городе Реутов.</p>
 	</center></body>
 </html>
