--- a/index.html
+++ b/index.html
@@ -22,5 +22,7 @@
 		<h3><h3>
 		<a href="brawl.html"><font size="30">Бравл Кокс</font></a> <br>
 		<h3><h3>
+		<a href="afgan.html"><font size="30">Подъезд Сашко</font></a> <br>
+		<h3><h3>
 	</center></body>
 </html>
